fix layout shift from scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
+html {
+  overflow-y: scroll;
 }
 
 @layer base {
@@ -103,7 +103,7 @@ body {
   }
   
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-mono;
   }
 }
 
